Updated Repositories to use Orm Updated Services and Handler to use new mappers and repositories added pom.xml build config Added Guice Module to provide uninjectable Classes